# Footbe-Trader

./: .env.example  .gitignore  AUTH_ISSUE_DIAGNOSIS.md  COMPLETE_API_ANALYSIS.md  CRITICAL_FIX_STALE_ORDERS.md  CURRENT_STATUS.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRE_LAUNCH_CHECKLIST.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SELF_IMPROVEMENT_GUIDE.md  SYSTEM_ARCHITECTURE.md  pyproject.toml
config/run_modes/: live_scaled.yaml  live_small.yaml  paper_aggressive.yaml  paper_conservative.yaml
configs/: dev.yaml  league_aliases.yaml  manual_market_overrides.yaml  mapping_config.yaml  prod.yaml  strategy_config.yaml  strategy_config_aggressive.yaml  team_aliases.yaml
data/: .gitkeep  footbe_dev.db-shm  footbe_dev.db-wal
docs/: AGENT_POLICY.md  field_catalog.md  mapping.md
models/: poisson_v1.pkl  poisson_v1_metadata.json
scripts/: backtest.py  backtest_strategy.py  build_report.py  collect_snapshots.py  dashboard.py  export_to_sheets.py  generate_field_catalog.py  ingest_epl.py  ingest_fixtures.py  ingest_nba_games.py  kalshi_smoketest.py  kickoff_monitor.py  launch_live_trading.sh  map_fixtures_to_markets.py  map_nba_games.py  open_latest_report.py  run_agent.py  run_heartbeat.py  run_self_improving_agent.py  sync_kalshi_nba_markets.py  sync_kalshi_soccer_markets.py  sync_leagues.py  sync_portfolio_to_sheets.py  test_cancel_order.py  test_kalshi_auth.py  test_napoli_trade.py  train_poisson_model.py
tests/: conftest.py  test_alerts.py  test_backtest_metrics.py  test_config.py  test_database.py  test_field_catalog.py  test_football.py  test_heartbeat.py  test_kalshi_client.py  test_kill_switch.py  test_live_executor.py  test_snapshot_collector.py  test_strategy_backtest.py
(+104 files in other folders)
